--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
   </head>
   <body>
     <header>
@@ -121,12 +122,12 @@
         </ul>
       </nav>
 
-      <section class="one flex-row-center">
+      <section class="one flex-row-">
         <div class="articles-column flex-column">
           <!-- 1 -->
           <div class="articles">
             <article>
-              <div class="first-article article-box">
+              <div class="first-article article-box hover">
                 <h2 style="font-size: 22px">
                   Outrage Over Slain Aid Workers Deepens Democratic Resistance
                   to Israel Aid
@@ -138,7 +139,7 @@
                 </p>
                 <span>4 MIN READ</span>
               </div>
-              <div class="second-article article-box">
+              <div class="second-article article-box hover">
                 <span class="live"
                   ><strong class="special-color">LIVE</strong></span
                 >
@@ -158,7 +159,7 @@
             <div class="image img-1">
               <img src="./image/1.webp" />
             </div>
-            <div class="flex-row last-article">
+            <div class="flex-row last-article hover">
               <article>
                 <h5>
                   Under pressure from the U.S., Israel agreed to allow new aid
@@ -178,7 +179,7 @@
           <!-- 2 -->
           <div class="articles">
             <article>
-              <div class="first-article article-box">
+              <div class="first-article article-box hover">
                 <h2>
                   Earthquake Rattles Northeast, but Little Damage Is Reported
                 </h2>
@@ -190,7 +191,7 @@
                 <span>See more updates</span>
                 <span class="plus">9+</span>
               </div>
-              <div class="second-article article-box">
+              <div class="second-article article-box hover">
                 <h5>
                   See where the 4.8-magnitude earthquake struck New Jersey.
                 </h5>
@@ -199,7 +200,7 @@
             <div class="image img-2">
               <video src="./video/video.mp4"></video>
             </div>
-            <div class="more-vedio flex-row-">
+            <div class="more-vedio flex-row- hover">
               <div class="more- dark-more">
                 <i class="fa-solid fa-angle-left"></i>
               </div>
@@ -208,7 +209,7 @@
               </div>
             </div>
 
-            <div class="flex-row last-article">
+            <div class="flex-row last-article hover">
               <article>
                 <h5>
                   Here’s what to know about earthquakes (and how to stay safe).
@@ -239,7 +240,7 @@
               <li><a href="#">A Close-Up View</a></li>
             </ul>
             <article>
-              <div class="second-article article-box">
+              <div class="second-article article-box hover">
                 <h2>Biden Tells Baltimore ‘the Nation Has Your Back’</h2>
                 <p>
                   President Biden took an aerial tour of the bridge wreckage and
@@ -258,7 +259,7 @@
 
           <div class="articles">
             <article>
-              <div class="first-article article-box">
+              <div class="first-article article-box hover">
                 <h2>
                   Some Colleges Will Soon Charge $100,000 a Year. How Did This
                   Happen?
@@ -270,7 +271,7 @@
                 </p>
                 <span>6 MIN READ</span>
               </div>
-              <div class="second-article article-box">
+              <div class="second-article article-box hover">
                 <h2>
                   Biden Will Try Again to Wipe Out Student Loan Debt for
                   Millions of People
@@ -291,7 +292,7 @@
 
           <div class="articles">
             <article>
-              <div class="second-article article-box">
+              <div class="second-article article-box hover">
                 <h2>
                   Some Colleges Will Soon Charge $100,000 a Year. How Did This
                   Happen?
@@ -308,12 +309,75 @@
               <img src="./image/5.png" />
             </div>
           </div>
+
+          <!-- 6 -->
+
+          <div class="articles articles-row">
+            <section class="flex-row-">
+              <article class="flex-column hover">
+                <img src="./image/4.webp" />
+                <h2>
+                  Orange Steam Funnels Are a New York Symbol. What Are They For?
+                </h2>
+              </article>
+              <article class="flex-column tow-border hover">
+                <img src="./image/5.webp" />
+                <h2>
+                  The Benefits of Living in the Same Place for a Long Time
+                </h2>
+                <span>5 MIN READ</span>
+              </article>
+              <article class="flex-column hover">
+                <img src="./image/6.webp" />
+                <h2>
+                  What I Saw Working at The National Enquirer During Donald
+                  Trump’s Rise
+                </h2>
+                <span>24 MIN READ</span>
+              </article>
+              <i class="fa-solid fa-angle-right more-right"></i>
+            </section>
+          </div>
+
+          <!-- 7 -->
+
+          <div class="articles">
+            <article>
+              <div class="first-article article-box hover">
+                <h2>
+                  New York City to Pay a Record $28 Million to Settle Rikers
+                  Island Suit
+                </h2>
+                <p>
+                  Eight correction officers and a captain stood by for seven
+                  minutes and 51 seconds as Nicholas Feliciano tried to hang
+                  himself in a jail cell in 2019.
+                </p>
+                <span>7 MIN READ</span>
+              </div>
+              <div class="second-article article-box hover">
+                <h2>
+                  Arrests Expose Rift Between N.Y.P.D. and ‘Violence
+                  Interrupters’
+                </h2>
+                <p>
+                  An outreach worker trained to intervene in street conflicts
+                  was hospitalized after he and a colleague were arrested amid
+                  an altercation with the police.
+                </p>
+                <span>6 MIN READ</span>
+              </div>
+            </article>
+            <div class="image img-7">
+              <img src="./image/7.webp" />
+            </div>
+          </div>
         </div>
 
         <!--  -->
 
         <aside class="flex-column aside">
-          <article class="box-flex">
+          <article class="box-flex hover">
             <div class="image-flex">
               <img src="./image/a-1.webp" />
             </div>
@@ -330,7 +394,7 @@
 
           <!-- 2 -->
 
-          <article class="box-flex">
+          <article class="box-flex hover">
             <div class="image-flex">
               <img src="./image/a-2.webp" />
             </div>
@@ -347,7 +411,7 @@
 
           <!-- 3 -->
 
-          <article class="box-flex flex-row tow-article">
+          <article class="box-flex flex-row tow-article- hover">
             <article>
               <img src="./image/a-3.webp" />
               <h2>
@@ -373,10 +437,178 @@
               </div>
             </div>
           </article>
-          <!--  -->
-          <article class="box-flex"></article>
+          <!-- 4 -->
+          <article class="box-flex flex-row tow-article hover">
+            <div>
+              <p style="color: black"><strong>Opinion</strong></p>
+              <p>LYDIA POLGREEN</p>
+              <h2>
+                Three Democratic Senators Are Stuck Indulging an Outdated
+                Fantasy
+              </h2>
+              <span>6 MIN READ</span>
+            </div>
+            <img class="photo" src="./image/p-1.webp" />
+          </article>
+
+          <!-- 5 -->
+
+          <article class="box-flex hover">
+            <p>KATHLEEN LENIHAN AND MAUREEN LENIHAN RUST</p>
+            <h2>
+              Our Mom Is 75. We’re Moving Heaven and Earth for This Eclipse.
+            </h2>
+            <span>5 MIN READ</span>
+            <div class="image-flex">
+              <img src="./image/a-5.webp" />
+            </div>
+          </article>
+
+          <!-- 6 -->
+
+          <article class="box-flex flex-row tow-article hover">
+            <div>
+              <p>MARUREEN DOWD</p>
+              <h2>Donald Trump’s Insatiable Bloodlust</h2>
+              <span>4 MIN READ</span>
+            </div>
+            <img class="photo" src="./image/p-2.webp" />
+          </article>
+
+          <!-- 7 -->
+
+          <article class="box-flex hover">
+            <p>PAUL RUSESABAGINA</p>
+            <h2>
+              My Story Was Told in ‘Hotel Rwanda.’ Here’s What I Want the World
+              to Know Now.
+            </h2>
+            <span>5 MIN READ</span>
+          </article>
+
+          <!-- 8 -->
+
+          <article class="box-flex hover">
+            <p>RYAN MILLIGAN</p>
+            <h2>
+              You Don’t Just See a Total Solar Eclipse. You Feel It Completely.
+            </h2>
+            <span>5 MIN READ</span>
+          </article>
+
+          <!-- 9 -->
+
+          <article class="box-flex hover">
+            <div class="image-flex">
+              <img src="./image/a-6.webp" />
+            </div>
+            <h2>
+              How Does Dev Patel Become an Action Star? By Directing Himself.
+            </h2>
+            <p>
+              With his feature filmmaking debut, “Monkey Man,” Dev Patel joins a
+              list of performers known for dramas taking on unlikely parts.
+            </p>
+            <span>5 MIN READ</span>
+          </article>
+
+          <!-- 10 -->
+
+          <article class="box-flex hover">
+            <div class="image-flex">
+              <img src="./image/a-7.webp" />
+            </div>
+            <h2>Make Room Tennis, Pickleball and Squash. Here Comes Padel.</h2>
+            <p>
+              In this racket sport, players must watch out for bouncing shots
+              from the back wall. Our reporters took a look at the padel scene
+              in New York City.
+            </p>
+            <span>5 MIN READ</span>
+          </article>
         </aside>
       </section>
+
+      <div class="articles-grid-">
+        <article class="article-box one hover">
+          <h2>
+            Why Time Is Running Out Across the Maldives’ Lovely Little Islands
+          </h2>
+          <p>
+            Global tourism brought a modern economy to the country’s thousand
+            islands. For many Maldivians, the teeming capital beckons.
+          </p>
+          <span>6 MIN READ</span>
+        </article>
+        <article class="article-box tow hover">
+          <h2>
+            Sickened by U.S. Nuclear Program, Communities Turn to Congress
+          </h2>
+          <p>
+            In St. Louis and around the country, people harmed by the drive for
+            an atomic bomb have been shut out of a federal law enacted to help
+            such victims.
+          </p>
+          <span>7 MIN READ</span>
+        </article>
+        <article class="article-box three hover">
+          <h2>
+            Earthquake Rattles New York and New Jersey, but Does Little Damage
+          </h2>
+          <p>
+            An earthquake struck the Northeast on Friday, rippling from
+            Philadelphia to Boston. An aftershock was widely felt around 6 p.m.
+          </p>
+          <span>5 MIN READ</span>
+        </article>
+
+        <article class="article-box four hover">
+          <img src="./image/8.webp" />
+          <h2>
+            A Frozen Pond and a New Way to Experience an Ancient Jewish Ritual
+            in Maine
+          </h2>
+          <p>
+            Students from Colby College helped harvest ice from a pond for a new
+            mikvah, or ritual bath, at a synagogue in Waterville.
+          </p>
+          <span>6 MIN READ</span>
+        </article>
+
+        <article class="article-box five hover">
+          <h2>
+            Daniel Jordan, Monticello Leader in Changing Times, Dies at 85
+          </h2>
+          <span>5 MIN READ</span>
+        </article>
+        <article class="article-box six hover">
+          <h2>
+            Man Set Fire Outside Bernie Sanders’s Vermont Office, Police Say
+          </h2>
+          <span>2 MIN READ</span>
+        </article>
+        <article class="article-box seven hover">
+          <h2>What to Know About Slovakia’s Presidential Election</h2>
+          <span>3 MIN READ</span>
+        </article>
+        <article class="article-box eight hover">
+          <h2>
+            There’s an Explosion of Plastic Waste. Big Companies Say ‘We’ve Got
+            This.’
+          </h2>
+          <span>7 MIN READ</span>
+        </article>
+        <article class="article-box nine hover">
+          <h2>
+            Lynne Reid Banks, Author of ‘The Indian in the Cupboard,’ Dies at 94
+          </h2>
+          <span>5 MIN READ</span>
+        </article>
+        <article class="article-box ten hover">
+          <h2>How to Claim Your Part of a $45 Million Walmart Settlement</h2>
+          <span>3 MIN READ</span>
+        </article>
+      </div>
     </main>
     <script
       src="https://kit.fontawesome.com/11cf7e4d55.js"
