--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="  Access All of The Times Today — One subscription. All of The Times. The
+  definitive coverage of your favorite subjects. Save on unlimited access to all
+  of The Times including News, Games, Audio and more."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.nytimes.com/" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <title>
+      The New York Times - Breaking News, US News, World News and Videos
+    </title>
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
