--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </head>
   <body>
     <header>
+      <aside class="ads">
+        <img src="./image/ad.png" alt="ad" />
+      </aside>
       <div class="flex-row">
         <svg
           aria-hidden="true"
@@ -449,7 +452,7 @@
             </div>
           </article>
           <!-- 4 -->
-          <article class="box-flex flex-row tow-article hover">
+          <article class="non-b box-flex flex-row tow-article hover">
             <div>
               <p style="color: black"><strong>Opinion</strong></p>
               <p>LYDIA POLGREEN</p>
@@ -540,6 +543,10 @@
         </aside>
       </section>
 
+      <aside class="ads">
+        <img src="./image/ad-1.png" alt="ad" />
+      </aside>
+
       <div class="articles-grid-">
         <article class="article-box one hover">
           <h2>
@@ -620,6 +627,62 @@
           <span>3 MIN READ</span>
         </article>
       </div>
+
+      <!--  -->
+
+      <div class="articles-grid-">
+        <article class="article-box one hover">
+          <h2>
+            Inside the College Football ‘Super League’ Backed by Top Sports
+            Executives
+          </h2>
+          <p>
+            A group of influential leaders is pitching a system that would
+            displace the N.C.A.A. as the best way forward for a sport they
+            believe needs saving.
+          </p>
+        </article>
+        <article class="article-box tow hover">
+          <h2>Who Has the Edge in Iowa vs. South Carolina?</h2>
+          <p>
+            The team with the best bench in the country faces the national
+            player of the year for all the marbles.
+          </p>
+        </article>
+        <article class="article-box three hover">
+          <h2>
+            U.S. Women’s Soccer Beats Japan in Front of Record Crowd for
+            Domestic Friendly
+          </h2>
+          <p>
+            A record 50,644 fans witnessed young star Jaedyn Shaw shine in a
+            comeback victory at Mercedes-Benz Stadium in Atlanta.
+          </p>
+        </article>
+
+        <article style="margin-left: 5px" class="article-box four hover">
+          <img style="width: 508px" src="./image/9.webp" />
+        </article>
+
+        <article class="article-box five hover">
+          <h2>
+            Referee Stretchered Off Ice After Collision in Penguins-Flyers Game
+          </h2>
+        </article>
+        <article class="article-box six hover">
+          <h2>Another M.L.B. Star Needs Tommy John Surgery. What Now?</h2>
+        </article>
+        <article class="article-box seven hover">
+          <h2>
+            How the Oakland A’s Move to Sacramento Will Affect the Cities
+            Involved
+          </h2>
+        </article>
+      </div>
+
+      <aside class="ads">
+        <img src="./image/ad-2.png" alt="ad" />
+      </aside>
     </main>
     <script
       src="https://kit.fontawesome.com/11cf7e4d55.js"
